--- a/index.html
+++ b/index.html
@@ -94,11 +94,7 @@
 
     </div>
     <script>
-        start();
-        var view = new View(createModal);
-        var model = new Model(view);
-        var controller = new Controller(model);
-        var start = new Initial();
+        var start = init();
     </script>
 
 </body>
